# JM_T-cnica

./: .replit  estrutura.txt  pyproject.toml  replit.md  vercel.json
attached_assets/: Pasted--DOCTYPE-html-html-lang-pt-BR-head-meta-charset-UTF-8-meta-name-viewport-con-1753747252881_1753747252882.txt
backend/: config.py  extensions.py  main.py  models.py  requirements.txt
backend/routes/: __init__.py  relatorios.py
frontend/: consultar.html  criar.html  editar.html  excluir.html  imprimir.html  index.html  listar.html
frontend/assets/css/: styles.css
frontend/assets/js/: consultar.js  criar.js  editar.js  excluir.js  imprimir.js  listar.js  main.js
