[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors==4.0.0",
    "flask-migrate==4.0.5",
    "flask==3.0.0",
    "pytz==2023.3",
    "werkzeug==3.0.1",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-sqlalchemy==3.1.1",
]
